<resources>


    //Main activity
    <string name="app_name" translatable="false">Analyzer</string>
    <string name="stat">Statistics</string>
    <string name="settings">Settings</string>
    <string name="Exit">Exit</string>

    //Statistics
    <string name="back">Back</string>
    <string name="filter">Filter</string>
    <string name="hint_search">Search by Name, number e.t.c.</string>
    <string name="name">Contact name: </string>
    <string name="number">Number: </string>
    <string name="count">Call count: </string>
    <string name="total_time">Total call duration: </string>

            //filter
            <string name="often_calls">Most Often Calls</string>
            <string name="rarest_calls">Rarest Calls</string>
            <string name="longest_calls">Longest Calls</string>
            <string name="shortest_call">Shortest Calls</string>


   //Settings
    <string name="theme">Night mode</string>
    <string name="country">Country code</string>
    <string name="time">Time format</string>
    <string name="time_seconds">Seconds</string>
    <string name="time_minutes">Minutes</string>
    <string name="time_hours">Hours</string>
    <string name="time_all">H:M:S</string>
    <string name="none" translatable="false">None</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="seconds">seconds</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="latvian">Latvian</string>
    <string name="language">Language\n</string>


</resources>