<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <!-- Back Button -->
    <ImageButton
        android:id="@id/backButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:rotationY="180"
        android:src="@drawable/ic_back_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp"
        android:layout_below="@id/backButton">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="22sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/nightModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/timeFormatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="24sp"
            android:layout_marginTop="24sp"/>

        <RadioGroup
            android:id="@+id/timeFormatGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/time_seconds_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_seconds"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/time_minutes_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_minutes"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/time_hours_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_hours"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/time_all_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_all"
                android:textSize="18sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/languageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="22sp"
            android:layout_marginTop="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <RadioGroup
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/englishRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/latvianRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latvian"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/russianRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian"
                    android:textSize="18sp" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
