<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    >
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp">

        <!-- Back button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:rotationY="180"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_arrow"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Search field -->
        <EditText
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/filterButton"
            android:layout_toEndOf="@id/backButton"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:autofillHints="" />

        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:text="@string/filter" />

    </RelativeLayout>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topBar">

            <TextView
                android:id="@+id/CallInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"/>
        </ScrollView>


</RelativeLayout>